// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/AuthLink Logged In 1`] = `
<span
  className="inline-flex items-center gap-6"
>
  <a
    href="/JohnDoe/sensors"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <span
      className="icon transform -translate-y-0.5 transition inline-block align-middle group-hover:text-green inline-block align-middle rounded-full border border-gray-50"
      role="img"
      style={
        Object {
          "height": 33,
          "width": 33,
        }
      }
    >
      <img
        alt="Avatar of JohnDoe"
        height={32}
        src="https://source.boringavatars.com/pixel/32/JohnDoe?colors=F9FCFD,0000C2,0000C2,0000C2,100C53,46ECA1,46ECA1,46ECA1,8330FF,8330FF,8330FF,F2F3F8,E7EAF2,CFD0DC,B4B4C7,9695AE,787696,636188,4A4878,332F66,1E1A5A"
        width={32}
      />
    </span>
  </a>
  <button
    className="hidden lg:inline-flex text gap-2 transition items-center font-headline font-semibold group-hover:text-green"
    onClick={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1.005 0a1 1 0 0 0-1 1v11.14a1 1 0 0 0 .505.87l5.013 2.859A1 1 0 0 0 7.02 15v-2H8v-2h-.98l-.001-5.821a1 1 0 0 0-.448-.834L3.028 2H11V1a1 1 0 0 0-1-1H1.005Zm1 3.721L5.02 5.715v7.563l-3.014-1.719V3.721ZM11 3l5 5-5 5-1.41-1.41L12.17 9H8V7h4.17L9.59 4.41 11 3Z"
        fill="currentColor"
      />
    </svg>
    Logout
  </button>
</span>
`;

exports[`Storyshots UI Elements/AuthLink Logged Out 1`] = `
<span
  className="inline-flex items-center gap-6"
>
  <a
    className="inline-flex text gap-2 transition items-center font-headline font-semibold group-hover:text-green"
    href="/signin"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <svg
      height="16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 0a1 1 0 0 1 1 1v11.14a1 1 0 0 1-.505.87l-5.013 2.859A1 1 0 0 1 8.987 15l-.001-2H5.199l2-2h1.787V5.179a1 1 0 0 1 .449-.834L12.977 2H7v2.8L5.004 2.806V1a1 1 0 0 1 1-1H15Zm-1 3.721-3.014 1.994v7.563L14 11.559V3.721ZM3 3l5 5-5 5-1.41-1.41L4.17 9H0V7h4.17L1.59 4.41 3 3Z"
        fill="currentColor"
      />
    </svg>
    <span
      className="hidden xs:inline-block"
    >
      Login
    </span>
  </a>
</span>
`;
